app/assets/stylesheets/_commons.scss
* {
  box-sizing: border-box;
  color: $white;
}

body {
  background: $body_bg;
  margin: 0;
  padding: 0;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 70px;

  .partners {
    width: 20%;
    text-align: right;

    .link_img {
      margin: 0;
      padding: 0;
      line-height: 0;
      display: inline-block;
      vertical-align: middle;
    }
  }

  .logo {
    display: inline-block;
    width: 20%;
    text-align: left;
  }

  .log {
    display: none;
    width: auto;
    margin: 0 auto;
    text-align: center;
    font-family: Consolas, monaco, monospace;
    color: #fff;
    font-size: .9em;
    font-weight: normal;
    background: $word_label;
    line-height: normal;
    border-radius: 4px;
    padding: 6px 10px;
  }

  .rampage {
    display: inline-block;
    width: 50px;
    height: auto;
  }
}

a {
  text-decoration: none;
}

.too_late {

  h1 {
    line-height: .5em;
  }
  p {
    font-family: Consolas, monaco, monospace;
    color: $white;
    font-size: .9em;
    font-weight: normal;
    line-height: normal;
    border-radius: 4px;
    margin: 10px 10px 20px;
  }
}

.button {
  height: 40px;
  padding: 10px 15px;
  background: #FF6455;
  color: $white;
  font-size: 1em;
  border-radius: 4px;
  font-family: 'Lato', sans-serif;
  border: 0;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;

  &:hover {
    background-color: lighten(#FF6455, 5);
  }

  &.green {
    background: #00B7AF;
    margin-right: 10px;

    &:hover {
      background-color: lighten(#00B7AF, 5);
    }
  }
}

.wrapper {
  margin: 0 auto;
  max-width: 1200px;
  width: 100%;

  &.explanations {
    text-align: left;
    p {
      display: block;
      font-family: Consolas, monaco, monospace;
      color: $white;
      font-size: 1em;
      font-weight: normal;
      line-height: normal;
      padding: 0;
      margin: 5px;
    }

    span {
      color: #00B7AF;
    }
  }

  .combat_zone {
    height: 600px;
    margin: 0 auto;
    overflow: hidden;
    position: relative;
    width: 100%;
    transition: background-color 1s;

    &.defense_mode {
      background-color: $game_bg_defense;
      background-image: -webkit-linear-gradient(rgba(255,255,255,0), #00B7AF 100%);
      background-image: -o-linear-gradient(rgba(255,255,255,0), #00B7AF 100%);
      background-image: linear-gradient(rgba(255,255,255,0), #00B7AF 100%);
    }

    &.attack_mode {
      background-color: $game_bg_attack;
      background-image: -webkit-linear-gradient(rgba(255,255,255,0), #00B7AF 100%);
      background-image: -o-linear-gradient(rgba(255,255,255,0), #00B7AF 100%);
      background-image: linear-gradient(rgba(255,255,255,0), #00B7AF 100%);
    }

    .bonus_bar {
      height: 5px;
      background: #2B3142;
      position: absolute;
      bottom: 35px;
      left: 0;
      right: 0;
      width: 400px;
      margin: 0 auto;
      z-index: 200;
      display: none;

      .bonus_percentage {
        height: 5px;
        background: #00FFC6;
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        width: 80px; //FIXME JS ?
        z-index: 300;
      }
    }

    input[type="text"] {
      -moz-appearance: none;
      -moz-box-sizing: border-box;
      -webkit-appearance: none;
      -webkit-box-sizing: border-box;
      appearance: none;
      background-color: $game_input;
      border: 0;
      box-sizing: border-box;
      color: $white;
      font-family: Consolas, monaco, monospace;
      font-size: 1em;
      line-height: normal;
      margin: 0 auto;
      height: 45px;
      text-align: center;
      outline: none;
      padding: 8px;
      width: 400px;
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      z-index: 200;
    }
  }
}

.hud {
  height: 100%;
  position: relative;
  width: 100%;

  .room {
    display: inline-block;
    font-family: Consolas, monaco, monospace;
    color: $white;
    font-size: 1.2em;
    font-weight: normal;
    line-height: 0;
    padding: 0;
    margin: 0;
    position: absolute;
    top: 25px;
    left: 10px;
  }

  .opponent {
    display: inline-block;
    font-family: Consolas, monaco, monospace;
    text-transform: uppercase;
    color: $white;
    font-size: 1.2em;
    font-weight: normal;
    line-height: 0;
    padding: 0;
    margin: 0;
    position: absolute;
    bottom: 60px;
    right: 10px;
  }

  .edit_player {
    display: inline-block;
    font-family: Consolas, monaco, monospace;
    text-transform: uppercase;
    padding: 0;
    margin: 0;
    position: absolute;
    bottom: 42px;
    left: 10px;

    input[type="text"] {
      -moz-appearance: none;
      -moz-box-sizing: border-box;
      -webkit-appearance: none;
      -webkit-box-sizing: border-box;
      appearance: none;
      background-color: transparent;
      text-transform: uppercase;
      border: 0;
      box-sizing: border-box;
      color: $white;
      font-family: Consolas, monaco, monospace;
      font-size: 1.2em;
      line-height: 0;
      margin: 0 auto;
      text-align: left;
      outline: none;
      padding: 0;
      width: 300px;
      background-position: -1000px -1000px !important;
    }
  }

  .player_bonus {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    bottom: 50px;
    left: 0;
    right: 0;
    margin: 0 auto;
    width: 400px;
    text-align: center;
    z-index: 100;

    img {
      width: 28px;
      height: 28px;
      display: inline-block;
      margin: 0;
    }

    p {
      display: inline-block;
      font-family: Consolas, monaco, monospace;
      color: $white;
      font-size: 1em;
      font-weight: normal;
      line-height: 0;
      padding: 0;
      margin: 0 0 0 10px;
    }
  }

  #life_player, #life_opponent {
    display: block;
    width: 172px;
    height: 45px;
    background: asset-url("under_life.svg");
    background-size: 172px 45px;
    bottom: 0;
    display: flex;
    list-style-type:none;
    margin: 0;
    padding: 5px 26px 5px 5px;
    position: absolute;
    align-items: center;

    .life_bar {
      display: block;
      width: 10px;
      height: 28px;
      margin: 0 4px 0 0;
      padding: 0;
    }

    .life_bar:nth-child(-n+3) {
      svg {
        fill: $life;
      }
    }

    .life_bar:nth-child(n+4) {
      svg {
        fill: lighten($life, 10);
      }
    }

    .life_bar:nth-child(n+7) {
      svg {
        fill: lighten($life, 20);
      }
    }

    .life_bar:last-child {
      svg {
        fill: lighten($life, 30);
      }
    }
  }

  #life_player {
    left: 0;
  }

  #life_opponent {
    right: 0;
    transform: scaleX(-1)
  }
}

.row {
  text-align: center;
  background-image: -webkit-linear-gradient(#21252F, #353E56 100%);
  background-image: -o-linear-gradient(#21252F, #353E56 100%);
  background-image: linear-gradient(#21252F, #353E56 100%);
  width: 100%;
  padding: 40px;
  overflow: hidden;

  &:nth-child(odd) {
    background: $body_bg;
  }

  .wrapper {

    h1 {
      display: block;
      font-family: 'Lato', sans-serif;
      color: $white;
      font-size: 2em;
      font-weight: normal;
      padding-bottom: 10px;
    }

    .title {
      h1 {
        display: block;
        font-family: 'Lato', sans-serif;
        color: $white;
        font-size: 2em;
        font-weight: normal;
        padding-bottom: 0;
      }

      p {
        display: block;
        font-family: Consolas, monaco, monospace;
        color: $white;
        font-size: 1em;
        font-weight: normal;
        line-height: normal;
        padding: 0;
        margin: 5px 5px 20px 5px;
      }
    }

    .new_game {
      background: $white;
      display: inline-block;
      padding: 5px 5px 5px 20px;
      border-radius: 4px;

      p {
        display: inline-block;
        color: #BABABA;
        font-family: Consolas, monaco, monospace;
        font-size: 1em;
        line-height: normal;
        margin: 0;
        padding: 0;
      }

      input[type="text"] {
        -moz-appearance: none;
        -moz-box-sizing: border-box;
        -webkit-appearance: none;
        -webkit-box-sizing: border-box;
        appearance: none;
        background-color: $white;
        border: 0;
        box-sizing: border-box;
        color: #FF6455;
        font-family: Consolas, monaco, monospace;
        font-size: 1em;
        line-height: 1.5em;
        margin: 0 auto;
        height: 40px;
        text-align: left;
        outline: none;
        padding: 10px 10px 10px 0;
        width: 300px;
      }
    }
  }
}

.join_us {
  .mothership {
    position: relative;
    display: block;
    top: initial;
    left: initial;

    .word {
      display: inline-block;
      background: $life;
      margin-bottom: 10px;
    }

    .ship {

      svg {
        width: 200px;
        height: 180px;
      }
    }
  }
}

.launchpad, .full {
  .log {
    display: none;
  }
}


.typed-cursor{
  opacity: 1;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}

@keyframes blink {
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

@-webkit-keyframes blink {
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

@-moz-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

